--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/toribromma/developerProfileGenerator#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "html-pdf": "^3.0.1",
     "inquirer": "^8.2.4"
   }
 }
